--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .container {
+  margin-top: 100px;
   max-width: 1100px;
   padding-left: var(--space-4);
   padding-right: var(--space-4);
   margin-left: auto;
   margin-right: auto;
 }
-
 
 .card {
   background-color: var(--color-bg-surface);
